Bug 186561 - Control of visibility of the menu bar in kde4 konsoles does not work properly
Summary: Control of visibility of the menu bar in kde4 konsoles does not work properly
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Unspecified
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-08 16:07 UTC by Nicolas L.
Modified: 2014-12-11 18:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas L. 2009-03-08 16:07:26 UTC
Version:            (using KDE 4.2.1)
Installed from:    Mandriva RPMs


Description of problem:

Konsole allows for konsoles with a given profile to be created with or without
a visible menubar by doing Settings -> Edit current profile -> General -> Show
menu bar in new windows.

Regardless of the settings selected for a profile, konsoles are sometimes
created with and sometimes without a menu bar. It looks likely that visibility
of the menubar is determined - rather than by the definition in the profile -
by what figures in .kde4/share/config/konsolerc - which reflects the last
explicit action of hiding or showing the menubar in some other konsole. This
behaviour is not what is needed when using profiles (the behaviour in kde3 was
correct).


Version-Release number of selected component (if applicable):
konsole from KDE 4.2.1

How reproducible:
not always; see remark about influence of menubar-visibility toggling in other
konsoles as recorded in konsolerc


Steps to Reproduce:
1. Create a profile with menubars made invisible (Settings -> Edit current
profile -> General -> uncheck "Show menu bar in new windows"
2. Launch a konsole
3. In some other konsole: do View -> Check/Uncheck "Show Menu Bar"
4. Iterate (2) and (3)

.kde4/share/config/konsolerc  -  first  >> https://qa.mandriva.com/attachment.cgi?id=12564

First dump of my konsolerc




.kde4/share/config/konsolerc  -  second >> https://qa.mandriva.com/attachment.cgi?id=12565

Second dump of my konsolerc - make immediately after the first, after having
done precisely 2 actions:
 - action 1: resize the height of a (any) konsole
 - action 2: konsole popup-window -> hit "Show Menu Bar"


The 2 images of konsolerc illustrate the probable reason for the problem:

When there was a "Set default konsole" button (kde3), konsolerc was
(essentially) updated only when that button was hit. In kde4 this button has
not been implemented, and konsolerc is updated whenever the properties of any
konsole has been modified. That would be OK (it is a question of taste), but
only if konsoles that are newly created with a given profile are created with
the properties defined in the profile - the values from konsolerc should only
be used to determine properties that are not defined in the profile.
Comment 1 Jonathan Thomas 2009-03-08 18:28:37 UTC
This might be related to bug 172142.
Comment 2 Jekyll Wu 2011-09-24 22:03:43 UTC
Git commit b5dc6891a8c4cb58de7ad5a640f17c823fc1e953 by Jekyll Wu.
Committed on 24/09/2011 at 23:59.
Pushed by jekyllwu into branch 'master'.

The initial visibility of menubar should be determined by profile option.

BUG: 186561
FIXED-IN: 4.8
REVIEW: 102502

M  +27   -14   src/MainWindow.cpp
M  +7    -4    src/MainWindow.h

http://commits.kde.org/konsole/b5dc6891a8c4cb58de7ad5a640f17c823fc1e953
Comment 3 Vincent Batts 2014-10-14 14:35:50 UTC
Hey there,
I am on KDE 4.10.5 / Konsole 2.10.5 and still having this exact failure. Even manually setting the value 'MenuBar=Disabled' is reverted on closing and reopening konsole.
Comment 4 Christoph Feck 2014-10-25 16:26:01 UTC
Vincent, what is your setting in "Configure Konsole..." > General > Show menubar by default?
Comment 5 Vincent Batts 2014-12-11 18:37:59 UTC
ah. That did it. That seems like a new place. Thanks.