The initial visibility of menubar should be determined by profile option.

BUG: 186561
FIXED-IN: 4.8
REVIEW: 102502